@startuml MCD_Unitee
!theme plain
skinparam linetype ortho

title MCD - UNITEE Veille Marchés Publics

' ============================================================
' ENTITÉS MÉTIER
' ============================================================

entity SOURCE {
  nom_source
  type_source
  url_base
  actif
}

entity ACHETEUR {
  nom_acheteur
  type_acheteur
  region
  contact_email
}

entity MOT_CLE {
  mot_cle
  categorie
  pertinence
}

entity ANNONCE {
  id_externe
  titre
  description
  montant_estime
  date_publication
  date_limite_reponse
  localisation
  region
  lien_source
  statut
}

entity SCORE_PERTINENCE {
  score_pertinence
  niveau_alerte
  raison_scoring
  bonus_keywords
  bonus_montant
  bonus_deadline
  bonus_acheteur
}

entity NOTIFICATION {
  type_alerte
  statut
  priorite
  message
  date_envoi
}

entity LOG_TECHNIQUE {
  type_operation
  source_operation
  statut
  message
  details_json
  duree_ms
}

entity LOG_METIER {
  type_operation
  utilisateur
  description
  avant_etat
  apres_etat
}

entity HISTORIQUE_ANNONCE {
  type_modification
  colonne_modifiee
  valeur_ancienne
  valeur_nouvelle
}

entity LOG_SAUVEGARDE {
  type_sauvegarde
  fichier
  statut
  taille_fichier
  duree_secondes
  message_erreur
}

' ============================================================
' ASSOCIATIONS ET CARDINALITÉS
' ============================================================

' Une SOURCE publie plusieurs ANNONCES
' Une ANNONCE provient d'exactement une SOURCE
SOURCE ||--o{ ANNONCE : "publie"

' Un ACHETEUR émet plusieurs ANNONCES
' Une ANNONCE est émise par exactement un ACHETEUR
ACHETEUR ||--o{ ANNONCE : "émet"

' Une ANNONCE contient plusieurs MOT_CLÉ (et un MOT_CLÉ peut être dans plusieurs ANNONCES)
' Table d'association avec score contextuel
ANNONCE }o--o{ MOT_CLE : "contient"

' Une ANNONCE a exactement un SCORE_PERTINENCE (1:1)
ANNONCE ||--|| SCORE_PERTINENCE : "est évaluée par"

' Une ANNONCE génère plusieurs NOTIFICATIONS
ANNONCE ||--o{ NOTIFICATION : "génère"

' Une ANNONCE a plusieurs LOG_METIER (traçabilité)
ANNONCE ||--o{ LOG_METIER : "est tracée dans"

' Une ANNONCE a plusieurs HISTORIQUE_ANNONCE (versioning)
ANNONCE ||--o{ HISTORIQUE_ANNONCE : "est archivée dans"

' LOG_TECHNIQUE est indépendant (pas de FK vers ANNONCE)
note right of LOG_TECHNIQUE
  Logs système (imports, erreurs, perfs)
  Entité indépendante - pas de lien FK
end note

' LOG_SAUVEGARDE est indépendant
note right of LOG_SAUVEGARDE
  Traçabilité des sauvegardes
  Entité indépendante - pas de lien FK
end note

note bottom of ANNONCE
  Contrainte d'unicité métier :
  (source, id_externe) → doublon impossible
  Même annonce sur plusieurs sources = entrées distinctes
end note

@enduml
